k8s/base/xdmod-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: xdmod-route
  namespace: xdmod
spec:
  host: xdmod.apps.nerc-shift-0.rc.fas.harvard.edu
  to:
    kind: Service
    name: xdmod
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
